# Mession

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Main.cpp  README.md  TODO.md  mongocxx_install_manifest.txt
.cursor/rules/: project-cpp-style.mdc
.github/workflows/: cmake-multi-platform.yml
Common/: Config.h  LogSink.h  Logger.h  MessageUtils.h  NetServerBase.cpp  NetServerBase.h  ParseArgs.h  ServerConnection.cpp  ServerConnection.h  ServerMessages.h  StringUtils.h
Config/: build_systems.example.json  build_systems.json  gateway.conf  mgo.conf  router.conf  server_cluster.example.json  world.conf
Core/: Async.h  EventLoop.cpp  EventLoop.h  ITaskRunner.h  MEventLoop.h  NetCore.cpp  NetCore.h  PacketCodec.h  Poll.h  Promise.h  RingBuffer.h  Socket.cpp  Socket.h  SocketAddress.h  SocketPlatform.cpp  SocketPlatform.h  TaskEventLoop.cpp  TaskEventLoop.h  TaskQueue.h  ThreadPool.h
Docker/: control-api.Dockerfile  registry.Dockerfile
Docs/: Architecture.md  ArchitectureRefactorPlan.md  AsyncAwaitProposal.md  AsyncAwaitTasks.md  AvaloniaEditorPlan.md  BuildAndRun.md  CombatDomainModel.md  CombatPhase1ImplementationScope.md  CombatSystemConcept.md  FrameworksResearch.md  GameplayAndState.md  K8sContainerPrep.md  MObjectAssetSerialization.md  NoWorkflowRefactorPlan.html  PersistenceAndReplication.md  PlayerRpcCodegenStatus.md  PlayerRpcDevelopment.md  README.md  RequestValidation.md  Roadmap.md  RuntimeAndRpc.md  ServerControlApi.md  ServerManagerTui.md  ServerRegistry.md  TODO.md  Tooling.md  UE_ClientSkeletonDesign.md  UE_HeartbeatIntegrationGuide.md  UE_LoginAgentPrompt.md  UE_LoginIntegrationGuide.md  UE_PlayerSyncAgentGuide.md  UE_ServerProjectManagerSpec.md  UE_SkillGraph_NodeSystem_Design.md  Validation.md  ValidationProtocolSchema.md  ValidationSchemaExportPlan.md  ValidationToolDesign.md  async-promise-coroutine.md  base-library.md  client-protocol-reflection.md  (+27 more)
Docs/RepositoryArchitecture/: index.html  styles.css
Docs/RepositoryArchitecture/assets/: styles.css
Docs/RepositoryArchitecture/examples/: index.html  runtime-examples.html  source-map.html
Docs/RepositoryArchitecture/flows/: index.html  main-flows.html
Docs/RepositoryArchitecture/modules/: foundation.html  index.html  servers.html
Docs/RepositoryArchitecture/review/: index.html  priorities.html
Docs/RepositoryArchitecture/runtime/: index.html  world-runtime.html
Docs/UE_SkillGraph/: NCSkillCompiledSpec.md  NCSkillGraphAsset.md  NCSkillGraphCompiler.md  NCSkillGraphNodeBase.md  README.md
EditorAssets/Combat/Monsters/: Slime.masset.json
Game/: GameServer.h
GameData/Combat/Monsters/: Slime.mobj.json
GameData/SkillAssets/: NewNCSkillGraphAsset1.uasset
K8s/: control-api-configmap.yaml  control-api-deployment.yaml  control-api-secret.yaml  kustomization.yaml  namespace.yaml  registry-configmap.yaml  registry-deployment.yaml  registry-pvc.yaml  registry-secret.yaml
Messages/: NetMessages.h
NetDriver/: NetObject.cpp  NetObject.h  Reflection.h  ReflectionExample.h  Replicate.h  ReplicationDriver.cpp  ReplicationDriver.h
Readme/: README.md  common.md  core.md  gateway.md  login.md  netdriver.md  router.md  scene.md  world.md
Scripts/: Build.bat  README.md  Start.bat  Stop.bat  build_project.py  build_systems.py  compile_assets.py  run_mobject_editor_avalonia.sh  server_cluster.py  server_control_api.py  server_manager_tui.py  server_registry.py  servers.py  test_client.py  validate.py  verify_protocol.py
Scripts/validation/: __init__.py  cli.py  config.py  context.py  errors.py  ids.py  legacy_runtime.py  model.py  report.py  runner.py  schema_loader.py
Scripts/validation/assertions/: __init__.py
Scripts/validation/env/: __init__.py  base.py
Scripts/validation/fixtures/: __init__.py
Scripts/validation/reporters/: __init__.py
Scripts/validation/schemas/: compat_protocol_schema.json
Scripts/validation/suites/: __init__.py
Scripts/validation/transport/: __init__.py  compat_parsers.py  gateway_client.py  packets.py  reflect.py  reflection_decoder.py
Servers/Gateway/: GatewayConnection.cpp  GatewayServer.cpp  GatewayServer.h  GatewayServerMain.cpp
Servers/Login/: LoginServer.cpp  LoginServer.h  LoginServerMain.cpp
Servers/Router/: RouterServer.cpp  RouterServer.h  RouterServerMain.cpp
Servers/Scene/: Scene.cpp  SceneServer.cpp  SceneServer.h  SceneServerMain.cpp
Servers/World/: AOIComponent.cpp  AOIComponent.h  PlayerManager.cpp  WorldServer.cpp  WorldServer.h  WorldServerMain.cpp
Source/Common/: Config.h  HexUtils.h  Id.h  Json.h  LogSink.h  Logger.cpp  Logger.h  MessageUtils.h  NetServerBase.cpp  NetServerBase.h  ParseArgs.h  ReflectionExample.cpp  ReflectionExample.h  ReflectionSmokeTypes.cpp  ReflectionSmokeTypes.h  ServerConnection.cpp  ServerConnection.h  ServerMessages.h  ServerRpcRuntime.cpp  ServerRpcRuntime.h  StringUtils.h  Time.h
Source/Common/Asset/: UAssetPackageReader.cpp  (+1 more)
Source/Core/: Json.h
Source/Gameplay/: AttributeMember.cpp  AttributeMember.h  AvatarMember.cpp  AvatarMember.h  InteractionMember.cpp  InteractionMember.h  InventoryMember.cpp  InventoryMember.h  MovementMember.cpp  MovementMember.h  PlayerAvatar.cpp  PlayerAvatar.h
Source/Messages/: NetMessages.h
Source/NetDriver/: MongoPersistenceSink.cpp  MongoPersistenceSink.h  NetObject.cpp  NetObject.h  PersistenceSubsystem.h  Reflection.cpp  Reflection.h  ReflectionExample.cpp  ReflectionExample.h  Replicate.h  ReplicationDriver.cpp  ReplicationDriver.h  ServerRpcServices.cpp  ServerRpcServices.h
Source/Protocol/: ServerMessages.h
Source/Tools/: MGeneratedStub.cpp  MHeaderTool.cpp  MObjectAssetSmokeTool.cpp  NetBench.cpp
config/: login.conf  scene.conf
docs/: TODO.md  async-promise-coroutine.md  base-library.md  eventloop-asio-survey.md  next-steps.md  protocol-byteorder.md  server-template.md  socket-layer-refactor.md  validation.md
readme/: README.md  common.md  core.md  gateway.md  login.md  netdriver.md  protocol.md  router.md  scene.md  world.md
scripts/: README.md  debug_replication.py  servers.py  test_client.py  validate.py  verify_protocol.py
(+431 files in other folders)
